--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.0.1",
     "locomotive-scroll": "^4.1.4",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
-    "react-tsparticles": "^2.12.2"
+    "react-tsparticles": "^2.12.2",
+    "tailwind-merge": "^3.0.2"
   }
 }
